# Rust

Discord Bot Project/: .env  Cargo.toml  users.db
Discord Bot Project/src/: database.rs  main.rs
Discord Bot Project/src/commands/: episode.rs  mod.rs  points.rs  quote.rs  strawhat.rs
Discord Bot Project/src/utility/: episodes.json  images.rs  mod.rs  path.rs  question.json  questions.json  quotes.json
Laborator1/: Cargo.toml
Laborator1/src/: main.rs
Laborator2/: Cargo.toml
Laborator2/src/: main.rs
Laborator3/: Cargo.toml
Laborator3/src/: main.rs
Laborator4/: Cargo.toml
Laborator4/src/: main.rs
Laborator5/src/: file_json.txt  main.rs
Laborator6/: file.txt
Laborator6/src/: main.rs
Laborator7/: Cargo.toml
Laborator7/src/: main.rs
