[package]
name = "Proiect_RustB_Discord_Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rusqlite = { version = "0.30.0", features = ["bundled"] }